# ai-team-bath-prosthetics

./: README.md  pyproject.toml
data/Datasets/BioTac-DoS-clean/aw/: bottle2_clean.csv  bottle3_clean.csv  brush28_clean.csv  brush29_clean.csv  brush30_clean.csv  bubbles55_clean.csv  bubbles56_clean.csv  bubbles57_clean.csv  bubbles58_clean.csv  cardboard82_clean.csv  cardboard83_clean.csv  cardboard84_clean.csv  cardboard85_clean.csv  case111_clean.csv  case112_clean.csv  case113_clean.csv  hd140_clean.csv  hd141_clean.csv  pen166_clean.csv  pen167_clean.csv  pen168_clean.csv  pen169_clean.csv  plate193_clean.csv  plate195_clean.csv  plate196_clean.csv  screw221_clean.csv  screw222_clean.csv  screw223_clean.csv  screw224_clean.csv  screw225_clean.csv  sponge252_clean.csv  striped279_clean.csv  striped280_clean.csv  striped281_clean.csv
data/Datasets/BioTac-DoS-clean/cw/: bottle4_clean.csv  bottle6_clean.csv  bottle7_clean.csv  brush31_clean.csv  brush32_clean.csv  brush33_clean.csv  brush34_clean.csv  bubbles59_clean.csv  bubbles60_clean.csv  bubbles61_clean.csv  bubbles62_clean.csv  cardboard88_clean.csv  cardboard89_clean.csv  case114_clean.csv  case115_clean.csv  case116_clean.csv  case117_clean.csv  hd142_clean.csv  hd143_clean.csv  hd144_clean.csv  hd145_clean.csv  pen171_clean.csv  pen172_clean.csv  pen173_clean.csv  plate198_clean.csv  plate199_clean.csv  plate200_clean.csv  screw226_clean.csv  (+10 more)
src/models/: __init__.py
src/pipeline/: __init__.py
src/utils/: CustomDatasets.py  DatasetUtils.py  DatasetsUtil.py  __init__.py
tests/: .gitkeep
(+206 files in other folders)
